  for example you may define in a conftest.py this method:
        def pytest_ignore_collect(path):
            return path.check(link=1)
  to prevent even a collection try of any tests in symlinked dirs. 
- new pytest_pycollect_makemodule(path, parent) hook for
  allowing customization of the Module collection object for a 
  matching test module. 
- expose (previously internal) commonly useful methods: 
  py.io.get_terminal_with() -> return terminal width
  py.io.ansi_print(...) -> print colored/bold text on linux/win32
  py.io.saferepr(obj) -> return limited representation string
- expose test outcome related exceptions as py.test.skip.Exception, 
  py.test.raises.Exception etc., useful mostly for plugins
  doing special outcome interpretation/tweaking
- (issue85) fix junitxml plugin to handle tests with non-ascii output
- fix/refine python3 compatibility (thanks Benjamin Peterson)
- fixes for making the jython/win32 combination work, note however: 
  jython2.5.1/win32 does not provide a command line launcher, see
  http://bugs.jython.org/issue1491 . See pylib install documentation
  for how to work around. 
- fixes for handling of unicode exception values and unprintable objects
- (issue87) fix unboundlocal error in assertionold code 
- (issue86) improve documentation for looponfailing
- refine IO capturing: stdin-redirect pseudo-file now has a NOP close() method
- ship distribute_setup.py version 0.6.10 
- added links to the new capturelog and coverage plugins 


Changes between 1.2.1 and 1.2.0
=====================================

- refined usage and options for "py.cleanup"::

    py.cleanup     # remove "*.pyc" and "*$py.class" (jython) files
    py.cleanup -e .swp -e .cache # also remove files with these extensions
    py.cleanup -s  # remove "build" and "dist" directory next to setup.py files
    py.cleanup -d  # also remove empty directories 
    py.cleanup -a  # synonym for "-s -d -e 'pip-log.txt'"